--- a/excercise-ui/src/styles.scss
+++ b/excercise-ui/src/styles.scss
@@ -2,3 +2,8 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 @import "@fortawesome/fontawesome-free/css/all.min.css";
 
+
+.logic-container{
+  with: 800px !important;
+  margin-top: 15%;
+  }
